doc: nicer version info.
	* doc/urbi-sdk.tex: Use \VcsDescription.

--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -9,7 +9,7 @@
 
 % CONFIGURATION
 \title{The Urbi Software Development Kit}
-\subtitle{\VcsVersionRev}
+\subtitle{Version \VcsDescription}
 \author{Kernel Team}
 
 % DOCUMENT
