doc: Comparable, Orderable, Group.
	* doc/specs/comparable.tex, doc/specs/group.tex,
	* doc/specs/orderable.tex: Doc them.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -56,6 +56,12 @@ Using waituntil on an event with no payload (ie: waituntil(?e) ...;)
 will not cause an internal error anymore.
 
 
+Documentation
+=============
+
+Extended documentation on: Comparable, Orderable.
+
+
 ****************************
 * New in kernel 2.0 beta 4 *
 ****************************
