--- a/doc/specs/system/platform.tex
+++ b/doc/specs/system/platform.tex
@@ -1,9 +1,10 @@
 \section{System.Platform}
 A description of the platform (the computer) the server is running on.
-\subsection{Slots}
 
-\subsubsection{kind}
-Either \code{"POSIX"} or \code{"WIN32"}.
+\begin{itemize}
+\item \lstinline{kind}\\
+  Either \code{"POSIX"} or \code{"WIN32"}.
+\end{itemize}
 
 %%% Local Variables:
 %%% mode: latex
