--- a/doc/installation.tex
+++ b/doc/installation.tex
@@ -4,7 +4,7 @@
 \section{Download}
 
 Various precompiled packages are provided.  They are named
-\file{kernel-\var{version}-\var{arch}-\var{os}-\var{compiler}.\var{ext}} where
+\file{urbi-sdk-\var{version}-\var{arch}-\var{os}-\var{compiler}.\var{ext}} where
 \begin{description}
 \item[\var{version}] specifies the exact revision of Urbi that you are
   using.  It can be simple, \code{2.0}, or more complex,
@@ -40,10 +40,10 @@ versions of our packages, in which case using symbolic links (aka
 sequence should look like:
 
 \begin{shell}
-$ tar zxf kernel-2.0-beta3-linux-x86.tar.gz
-$ sudo mv kernel-2.0-beta3-linux-x86 /usr/local
+$ tar zxf urbi-sdk-2.0-beta3-linux-x86.tar.gz
+$ sudo mv urbi-sdk-2.0-beta3-linux-x86 /usr/local
 $ cd /usr/local
-$ ln -sf kernel-2.0-beta3-linux-x86 gostai
+$ ln -sf urbi-sdk-2.0-beta3-linux-x86 gostai
 \end{shell}
 
 The \dfn{root} of the package, denoted by \var{urbi-root} hereafter,
