--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -4,7 +4,7 @@
 importance:
 \begin{description}
 \item[\dfn{urbi}] launches an \urbi server.  There are several means
-  to interact with this server, which will see later.
+  to interact with it, which we will see later.
 \item[\dfn{urbi-launch}] runs \urbi components, the UObjects, and connects
   them to an \urbi server.
 \end{description}
@@ -275,7 +275,7 @@ x.isVoid;
 \end{urbiscript}
 
 \section{Scopes\index{scope}}
-Scopes can be introduced with curly brackets (\lstinline|\{\}|), and can
+Scopes can be introduced with curly brackets (\lstinline|{}|), and can
 contain any number of expressions. Variables declared in a scope only
 exist within this scope (\autoref{lst:tut:scope}).
 
