doc: don't add thanks.
	* doc/introduction.tex: here.

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -32,6 +32,27 @@ Its main features are:
   network.
 \end{itemize}
 
+
+%% \paragraph{Thanks}
+%% The \us language what first designed and implemented by
+%% Jean-Christophe Baillie, together with Matthieu Nottale.  Because
+%% \urbi was widely acclaimed by its users, Jean-Christophe founded
+%% Gostai, a France-based Company that develops software for robotics
+%% with a strong emphasis on personal robotics.
+%%
+%% \us SDK 1 was further developped by Akim Demaille, Guillaume
+%% Deslandes, Quentin Hocquet, Thomas Moulard, and Benoît Sigoure.
+%%
+%% The \us SDK 2 project was started and developped by Akim Demaille,
+%% Quentin Hocquet, Matthieu Nottale, and Benoît Sigoure.  Samuel Tardieu
+%% provided an immense help during the year 2008, in particular for the
+%% concurrency and event support.
+%%
+%% The maintenance is currently carried out by Akim Demaille, Quentin
+%% Hocquet, and Matthieu Nottale.  Jean-Christophe Baillie is still
+%% deeply involved in the development of \us, he regularly submits ideas,
+%% and occasionnally even code!
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "urbi-sdk"
