--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -390,7 +390,7 @@ course, you can with a different construct, but that's not the point
 here.
 
 Since this output is often irrelevant, it is often hidden in this
-documentation it using the \lstinline'|{};' trick (or even
+documentation using the \lstinline'|{};' trick (or even
 \lstinline'|;'): when evaluating \lstinline'\var{code} | {};', the
 server first evaluates \var{code}, then evaluates \lstinline'{}' and
 return its value, \lstinline'void', which prints to nothing.
