--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -2,6 +2,15 @@ This file summarizes the user-visible changes since the first beta 1
 release.
 
 ***************************
+* New in kernel 2.0 RC 2. *
+***************************
+
+New UrbiScript functions
+========================
+
+- System._exit(status).
+
+***************************
 * New in kernel 2.0 RC 1. *
 ***************************
 
